# tutor_telegram_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: __init__.py
src/kosokolovsky_telegram_bot/: __init__.py  main.py
